<resources>
    <string name="app_name">Blood Pressure Monitor</string>
    <string name="Male">male</string>
    <string name="Female">Female</string>
    <string name="slow">Slow</string>
    <string name="normal">Normal</string>
    <string name="Fast">Fast</string>
    <string name="thanks_rating">Thanks for your rating.</string>
    <string name="active">Active</string>
    <string name="press_finger">Press your finger on camera</string>
    <string name="output_header_template">Heart rate on %s</string>
    <string name="send_output_to">Send output to:</string>
    <string name="dateFormat">yyyy-MM-dd\'T\'HH:mm:ssZZZZZ</string>
    <string name="row_separator">10</string>
    <string name="raw_values">Measurements (Timestamp, Value)</string>
    <string name="dateFormatGranular">yyyy-MM-dd\'T\'HH:mm:ss.SSSZZZZZ</string>
    <string name="separator">,</string>
    <string name="output_detected_peaks_header">Detected Peaks:</string>
    <string name="no_record">No RecordModel selected</string>
    <string name="fast_heart_rate">Your heart rate is high, This data is for reference only, If you think you have a heart problem we advice you to consult a doctor.</string>
    <string name="normal_heart_rate">Your current heart rate is quite well within normal range.</string>
    <string name="slow_heart_rate">Your current heart rate is slow, This data is for reference only, If you think you have heart problem, We advice you to consult a doctor</string>
    <string name="record_saved">Record saved</string>
    <string name="record_deleted">Record deleted</string>
    <string name="Normal">Normal</string>
    <string name="Warm_up">Warm up</string>
    <string name="training">Target HR training</string>
    <string name="Extreme">Extreme</string>
    <string name="High_intensity">High intensity</string>
    <string name="chart">Chart</string>
    <string name="history">History</string>
    <string name="next">NEXT</string>
    <string name="start">START</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="edit">Edit</string>
    <string name="hypertention">Hypertension</string>
    <string name="hypertention1">Hypertention - Stage 1</string>
    <string name="hypertention1_details">if you\'ve got 3 readings in this area, it\'s time to ask your doctor for prescriptions regarding lifestyle improvements.</string>
    <string name="hypertention2">Hypertention - Stage 2</string>
    <string name="hypertention2_details">if you\'ve gor 3 or more readings in this area, take care of your body through medical treatment and lifestyle changes.</string>
    <string name="hypertention_details">Your blood pressure seems a bit low.. if the situation continues. don\'t hesitate to consult your doctor.</string>
    <string name="elevated">Elevated</string>
    <string name="elevated_details">Your blood pressure is slightly above normal, We suggest you adopt a healthier lifestyle and measure your blood pressure regularly.</string>
    <string name="hypertensive">Hypertensive</string>
    <string name="normal_details">Rest assure! your blood pressure is in great condition, try to keep it!</string>
    <string name="hypertensive_details">We\'re worried about you.. Please call for emergency medical services immediately!</string>
    <string name="new_record">New Record</string>
    <string name="pulse">Pulse</string>
    <string name="date_amp_time">Date &amp; Time</string>
    <string name="save">Save</string>
    <string name="delete">DELETE</string>
    <string name="settings">Settings</string>
    <string name="knowledge">Knowledge</string>
    <string name="tracker">Tracker</string>
    <string name="tracker_">TRACKER</string>
    <string name="how_to_measure">How to measure</string>
    <string name="how_to_measure2">HOW TO MEASURE</string>
    <string name="measure">Measure</string>
    <string name="measure_and_track_your_heart_rate">measure and track your heart rate</string>
    <string name="info">Info</string>
    <string name="heart_rate_bpm">Heart Rate (bpm)</string>
    <string name="blood_pressure">Blood pressure</string>
    <string name="track_blood_pressure_and_protect_your_self">Track blood pressure and protect your self</string>
    <string name="become">Become a</string>
    <string name="vip">VIP</string>
    <string name="member">member</string>
    <string name="go_now">Go now</string>
    <string name="how_to_use">How to Use</string>
    <string name="how_to_use_1">In Home Screen , Tab “Heart rate “ banner to switch heart rate function</string>
    <string name="how_to_use_2">Tap “Start “ to beginning measurement.</string>
    <string name="how_to_use_3">Cover the camera lens with on of your fingertip (not the flashlight . it’s hot ) the viewing frame will turn red. Relax hand Hold it until the measurement ends!</string>
    <string name="how_to_use_4">You can switch back home screen by click button in setting screen.</string>
    <string name="how_to_use_7">You can switch back home screen by click button in setting screen.</string>
    <string name="how_to_use_title_1">How to measure heart rate</string>
    <string name="how_to_use_title_2">Back to home screen</string>
    <string name="your_details_are_stored_locally_and_not_shared">Your details are stored locally and not shared.</string>
    <string name="your_info">Your Info</string>
    <string name="your_result">Your Result</string>
    <string name="for_accurate_heart_rate_measurment_the_following_details_are_required">For accurate heart rate measurement the following details are required</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="languages">Languages</string>
    <string name="choose_language">Choose Language</string>
    <string name="result">Result</string>
    <string name="recheck">Recheck</string>
    <string name="normal_heart_rate_text">A normal resting heart rate, or a heart rate when a person is inactive, can range from 60 to 100 BPM</string>
    <string name="recomanded">Recomanded</string>
    <string name="loading_ads">Loading....</string>
    <string name="what_age">What is your Age ?</string>
    <string name="what_hight">What is your height ?</string>
    <string name="what_state">What is your state ?</string>
    <string name="what_weight">What is your Weight ?</string>
    <string name="cancel">Cancel</string>
    <string name="in_centemeter">in Centimeter</string>
    <string name="rate">Rate</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_us_message">We are working hard to develop and provide new content for this app, We\'d greatly appreciate if you can rate us.</string>
    <string name="rate_us_text">Rate Us</string>
    <string name="content_rate_1">5 stars is the best we can get</string>
    <string name="content_rate_2">Support us to develop app better!</string>
    <string name="last_measurment">last measurement</string>
    <string name="latest">Latest</string>
    <string name="add_record">Add Record</string>
    <string name="no_recorder">No records found</string>
    <string name="no_records_found">No records found</string>
    <string name="content_messure">Cover the camera lens with on of your fingertip. Hold it until the measurement ends!</string>
    <string name="average">Average</string>
    <string name="bpm">BPM</string>
    <string name="max">Max</string>
    <string name="min">Min</string>
    <string name="mode">Mode</string>
    <string name="more">More</string>
    <string name="export">Export Result</string>
    <string name="export_details">Export Details</string>
    <string name="export_result">Export Result</string>
    <string name="share">Share with friends</string>
    <string name="me">Me\n</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="how_to_measure_desc">Cover the camera lens and the flash with one fingertip, Hold it until the measurement is done.</string>
    <string name="tips">TIPS</string>
    <string name="tips_text">- Covering booth flash and camera is important to get accurate results1010- Relax and don\'t move your finger while measuring1010- Don\'t put a lot of pressure on the flash its hot1010- We measure your heart rate by detecting tiny changes in color and brightness on your fingertip.</string>
    <string name="in_kilograms">in Kilograms</string>
    <string name="add_at_least_1_record_to_unlock_the_stats">Create at least 1 record to tracking</string>
    <string name="all_history">All history</string>
    <string name="change_language">Change Language</string>
    <string name="privacy_policy1">Privacy Policy</string>
    <string name="privacy_policy">https://www.loulle.com</string>
    <string name="how_to_text">Place your fingertips on the camera lens. hold it until the measurement ends</string>
    <string name="got_it">GOT iT</string>
    <string name="enjoy">Enjoy the best health app for free.</string>
    <string name="tuto_text_1">- Accurate heart rate measurement.</string>
    <string name="tuto_text_2">- Statistics and insight about your BPM.</string>
    <string name="tuto_text_3">- Get Knowledge for free</string>
    <string name="start_now">START NOW</string>
    <string name="updates">Update</string>
    <string name="update_text">Updated version with many performance improvements and new features. Update your apps now!</string>
    <string name="maybe_later">Maybe later</string>
    <string name="addid">ca-app-pub-3928990988343664~5909499588</string>
</resources>