<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_rounded"
    android:backgroundTint="@color/primary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/what_state"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textColor"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded10"
            android:backgroundTint="@color/primaryDark"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:srcCompat="@drawable/resting" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/normal"
                android:textColor="@color/textColor" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded10"
            android:backgroundTint="@color/primaryDark"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:srcCompat="@drawable/training" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/active"
                android:textColor="@color/textColor" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded10"
        android:backgroundTint="#14274E"
        android:gravity="center"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        android:text="@string/cancel"
        android:textColor="@color/textColor" />
</LinearLayout>
